--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
       Redux is running: <span id="counter"></span>
     </div>
 
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
