update: redux directory structures

--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head lang="en">
     <title>The Complete Redux Book - Example Application</title>
   </head>
 
   <body>
     <div id="app">
-      Redux is running: <span id="counter"></span>
-    </div>
-
     <script type="text/javascript" src="index.js"></script>
+    </div>
   </body>
 </html>
