chore: update action types

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <title>The Complete Redux Book - Example Application</title>
   </head>
 
-  <body>
-    <div id="app">
-    <script type="text/javascript" src="index.js"></script>
+<body>
+    <div>
+        <h2>Creating a Store</h2>
     </div>
+    <div id="app"></div>
+    <script type="text/javascript" src="index.js"></script>
   </body>
 </html>
